# python-auto-translate-gettext

./: .gitignore  .gitlab-ci.yml  README.rst  config.ini-template  main.py  pyproject.toml
src/po_translate/: __init__.py
tests/: test_hidevars.py
